--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,17 +26,15 @@ dependencies:
       ref: a125851ca20038767ac4efa2e20d12116a390414
   polkawallet_sdk:
     git:
-      url: https://github.com/ashishbeck/sdk.git
-#  polkawallet_sdk:
-#    path: ../sdk
+     url: https://github.com/ashishbeck/sdk.git
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-#dependency_overrides:
-#  polkawallet_sdk:
-#    path: ../sdk
+dependency_overrides:
+  polkawallet_sdk:
+    path: ../sdk_fork
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
