--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,11 +43,12 @@ dependency_overrides:
 flutter:
 
   assets:
-   - assets/images/axiasolar_avatar.png
+   - assets/images/axia_avatar.png
    - assets/images/success.png
    - assets/images/error.png
    - assets/images/copy.png
    - assets/images/scan.svg
+   - assets/images/loading.svg
    - assets/images/app.png
    - assets/images/receive_line.png
 
